creo un texto en el foooter

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 </nav>
 <footer>
            <p>
-               
+               ESTE ES EL FOOOOOOOTER
            </p>
        </footer>
 </body>
