cambie los colores, agregue una texto al end

--- a/index.html
+++ b/index.html
@@ -24,9 +24,20 @@
            tengo la idea de hacer muchos tipos de sitio web
 
        </p> 
+       <p>
+           Bola de nieve
+           Bola de nieve
+           Bola de nieve Bola de nieve
+           Bola de nieve Bola de nieve
+           Bola de nieveBola de nieveBola de nieve
+           Bola de nieve
+       </p>
        
     </nav>
 </nav>
+<p class="ni">
+    bola de nieve
+</p>
 <footer>
            <p>
                
