--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Welcome</title>
+    <title>TITULO</title>
 </head>
 <body>
     <nav class="cabala">
@@ -24,20 +24,9 @@
            tengo la idea de hacer muchos tipos de sitio web
 
        </p> 
-       <p>
-           Bola de nieve
-           Bola de nieve
-           Bola de nieve Bola de nieve
-           Bola de nieve Bola de nieve
-           Bola de nieveBola de nieveBola de nieve
-           Bola de nieve
-       </p>
        
     </nav>
 </nav>
-<p class="ni">
-    bola de nieve
-</p>
 <footer>
            <p>
                ESTE ES EL FOOOOOOOTER
