--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <nav class="cabala">
-       <h2>Hola word</h2>
+       <h2>Hola word como estan?!!</h2>
        <nav class="caja">
        <p>
            Otra prueba o practica de mi sitio web
