Primer cambio del header

--- a/index.html
+++ b/index.html
@@ -12,16 +12,13 @@
        <h2>Hola word como estan?!!</h2>
        <nav class="caja">
        <p>
-           Otra prueba o practica de mi sitio web
-           tengo la idea de hacer muchos tipos de sitio web
-           Otra prueba o practica de mi sitio web
-           tengo la idea de hacer muchos tipos de sitio web
-           Otra prueba o practica de mi sitio web
-           tengo la idea de hacer muchos tipos de sitio web
-           Otra prueba o practica de mi sitio web
-           tengo la idea de hacer muchos tipos de sitio web
-           Otra prueba o practica de mi sitio web
-           tengo la idea de hacer muchos tipos de sitio web
+          Mi primer trabajo remoto con github, mi tarea es hacer el header
+	  - Presentar buena lineas
+	  - Buena escritura 
+	  - Menos pero mejor
+
+	  23412-123--|1 --123 1| -2 
+	 
 
        </p> 
        
