Cambio del footer

--- a/index.html
+++ b/index.html
@@ -29,7 +29,11 @@
 </nav>
 <footer>
            <p>
-               ESTE ES EL FOOOOOOOTER
+               
+	   <I> <b>"Un dia sin risa es un dia perdido"</b> </I>
+	   <TT> CHAPLIN </TT>
+                
+
            </p>
        </footer>
 </body>
