Nuevo titulo integrado

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <nav class="cabala">
-       <h2>Hola word como estan?!!</h2>
+       <h2>Nuevo titulo---</h2>
        <nav class="caja">
        <p>
           Mi primer trabajo remoto con github, mi tarea es hacer el header
