Linea agregada al header

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 	  - Presentar buena lineas
 	  - Buena escritura 
 	  - Menos pero mejor
+      - Diversas notas
 
 	  23412-123--|1 --123 1| -2 
 	 
